Fixed some alignment issues when the price was displayed on the main page

--- a/craigslistclone/app/assets/stylesheets/cities.css.scss
+++ b/craigslistclone/app/assets/stylesheets/cities.css.scss
@@ -80,7 +80,7 @@ body.cities {
       font-family: "Helvetica", sans-serif;
       .price {
         font-weight: bold;
-        font-size: 16pt;
+        font-size: 12pt;
       }
     }
   }
