--- a/craigslistclone/app/assets/stylesheets/posts.css.scss
+++ b/craigslistclone/app/assets/stylesheets/posts.css.scss
@@ -20,4 +20,13 @@ body.posts {
       color:black;
     }
   }
+  
+  #below-image {
+    a {
+      text-decoration: none;
+    }
+    a:visited {
+      color:black;
+    }
+  }
 }
